# upanix-os

./: .gitignore  CMakeLists.txt  Makefile  Makefile.act  Making_DiskImages.txt  build_load.sh  build_mos.sh  build_umount.sh  build_upanix.sh  depend.sh  kernel.ld  license.txt  net_commands.txt  net_readme.txt  notes.txt  readme.txt  runqemu  runqemu_uefi  setup.sh  svnUp  tags  todo.txt  up  upanix.files  upanix.includes  upanix_src_files.sh
boot/: Boot.asm  Boot_test.asm  MOSStart.asm  MOSStart_Main.asm  MOSStart_Main.asm.orig  MOSStart_Main.grub  Makefile  Setup.asm  UpanixStart.asm  UpanixStart_Main.asm  UpanixStart_Main.grub  fpu_init.asm  grub.cfg
display/: DefaultConsole.cpp  DefaultConsole.h  Display.cpp  Display.h  DisplayConstants.h  DisplayManager.cpp  DisplayManager.h  GraphicsConsole.cpp  GraphicsConsole.h  Makefile  Makefile.act  RootConsole.cpp  RootConsole.h  RootFrame.cpp  RootFrame.h  RootGUIConsole.cpp  RootGUIConsole.h  RootVGAConsole.cpp  RootVGAConsole.h  VGAConsole.cpp  VGAConsole.h
drivers/: DeviceDrive.cpp  DeviceDrive.h  DiskCache.cpp  DiskCache.h  Makefile  PartitionManager.cpp  PartitionManager.h
drivers/bus/: PCIBusHandler.cpp  PCIBusHandler.h  SCSIHandler.cpp  SCSIHandler.h
drivers/floppy/: Floppy.cpp  Floppy.h  Makefile  Makefile.act
drivers/ide/: ATACommandManager.cpp  ATACommandManager.h  ATADeviceController.cpp  ATADeviceController.h  ATADrive.cpp  ATADrive.h  ATAPortManager.cpp  ATAPortManager.h  ATAPortOperation.cpp  ATAPortOperation.h  ATATimingManager.cpp  ATATimingManager.h  Makefile  Makefile.act
drivers/keyboard/: BuiltInKeyboardDriver.cpp  BuiltInKeyboardDriver.h  KBDriver.cpp  KBDriver.h  Keyboard.cpp  Keyboard.h  KeyboardHandler.cpp  KeyboardHandler.h  KeyboardKeyProcessor.cpp  KeyboardKeyProcessor.h  Makefile
drivers/mouse/: Makefile.act  MouseDriver.cpp  MouseDriver.h
drivers/net/: Makefile.act  NIC.cpp  NIC.h  NetworkDevice.cpp  NetworkDevice.h  NetworkManager.cpp  NetworkManager.h  NetworkUtil.cpp  NetworkUtil.h  RealtekNIC.cpp  RealtekNIC.h  SocketBuffer.h
drivers/ps2/: PS2Controller.cpp  PS2Controller.h  PS2KeyboardDriver.cpp  PS2KeyboardDriver.h  PS2MouseDriver.cpp  PS2MouseDriver.h
drivers/usb/: EHCIController.cpp  EHCIController.h  EHCIDataHandler.cpp  EHCIDataHandler.h  EHCIDevice.cpp  EHCIDevice.h  EHCIManager.cpp  EHCIStructures.h  Makefile  UHCIController.cpp  UHCIController.h  UHCIDataHandler.cpp  UHCIDataHandler.h  (+10 more)
env_setup/: docker
exeparser/: ElfConstants.h  ElfDynamicSection.h  ElfHeader.h  ElfParser.cpp  ElfParser.h  ElfProgHeader.h  ElfRelocationSection.h  ElfSectionHeader.h  ElfSymbolTable.h  Makefile  Makefile.act  tee
filesystem/: BufferedReader.cpp  BufferedReader.h  Directory.cpp  Directory.h  FSCommand.cpp  FSCommand.h  FSManager.cpp  FSManager.h  FSStructures.h  FileDescriptor.h  FileDescriptorTable.cpp  FileDescriptorTable.h  FileOperations.cpp  FileOperations.h  FileSystem.cpp  FileSystem.h  Makefile  Makefile.act  ProcFileManager.cpp  ProcFileManager.h
floppy/: DRV1.FDD.img  GrubFloppy_ext.img  GrubFloppy_mos.img  Making.GrubFloppy  RawGrubFloppy.img  create_diskimage.txt  menu.lst  menu.lst.bak
fonts/: Makefile  unifont.sfn
images/: Makefile
io/: DupDescriptor.cpp  DupDescriptor.h  FileDescriptor.cpp  FileDescriptor.h  IODescriptor.h  IODescriptorTable.cpp  IODescriptorTable.h  NullDescriptor.cpp  NullDescriptor.h  RedirectDescriptor.cpp  RedirectDescriptor.h  StreamBufferDescriptor.cpp  StreamBufferDescriptor.h
kernel/: Acpi.cpp  Acpi.h  Apic.cpp  Apic.h  Atomic.cpp  Atomic.h  Cpu.cpp  Cpu.h  Exerr.h  IDT.cpp  IDT.h  IrqManager.cpp  IrqManager.h  KBInputHandler.cpp  KBInputHandler.h  KernelComponents.cpp  KernelComponents.h  KernelService.cpp  KernelService.h  MOSMain.cpp  MOSMain.h  MOS_CPP_Plugin.cpp  Makefile  Makefile.act  MountManager.cpp  MountManager.h  Mtrr.cpp  Mtrr.h  MultiBoot.cpp  MultiBoot.h  PCSound.cpp  PCSound.h  PIC.cpp  PIC.h  PIT.cpp  PIT.h  Pat.cpp  Pat.h  PortCom.cpp  PortCom.h  (+14 more)
kernelprocs/: Makefile
libc/: CMakeLists.txt  Makefile  Makefile.act  run_make.sh
libcxxrt/: CMakeLists.txt  Makefile  exception.cc  libelftc_dem_gnu3.c  typeinfo.cc
libgcceh/: CMakeLists.txt  Makefile
libmcpp/: CMakeLists.txt  Makefile  Makefile.act
memory/: DMA.cpp  DMA.h  DMM.cpp  DMM.h  Makefile  Makefile.act  Mem.asm  MemConstants.h  MemManager.cpp  MemManager.h  MemUtil.cpp  MemUtil.h
osutils/: .procinit  .realmode  Makefile  crti.s  crtn.s  dll.asm  proc_init.asm  realmode.asm
process/: AutonomousProcess.cpp  AutonomousProcess.h  DLLLoader.cpp  DLLLoader.h  DynamicLinkLoader.cpp  DynamicLinkLoader.h  IProcess.h  KernelProcess.cpp  KernelProcess.h  KernelRootProcess.cpp  KernelRootProcess.h  KernelThread.cpp  KernelThread.h  Makefile  Makefile.act  Process.cpp  Process.h  ProcessAllocator.cpp  ProcessAllocator.h  ProcessConstants.h  ProcessDLLInfo.h  ProcessEnv.cpp  ProcessEnv.h  ProcessGroup.cpp  ProcessGroup.h  ProcessGroupManager.cpp  ProcessGroupManager.h  ProcessLoader.cpp  ProcessLoader.h  ProcessManager.cpp  ProcessManager.h  ProcessStateInfo.h  SchedulableProcess.cpp  SchedulableProcess.h  TaskStructures.cpp  TaskStructures.h  Thread.cpp  Thread.h  UserProcess.cpp  UserProcess.h  (+2 more)
resource/: Makefile  Makefile.act  ResourceManager.cpp  ResourceManager.h
syscall/: Makefile  Makefile.act  SysCall.cpp  SysCall.h  SysCallDisplay.cpp  SysCallDisplay.h  SysCallDrive.cpp  SysCallDrive.h  SysCallFile.cpp  SysCallFile.h  SysCallKB.cpp  SysCallKB.h  SysCallMem.cpp  SysCallMem.h  SysCallProc.cpp  SysCallProc.h  SysCallUtil.cpp  SysCallUtil.h
test/: compile.sh  run.sh  test_list.C  test_map.C  test_queue  test_vector.C
testsuite/: Makefile  Makefile.act  TestSuite.cpp  TestSuite.h
users/: Makefile  Makefile.act  UserManager.cpp  UserManager.h
util/: AsmUtil.h  BinaryTree.cpp  BinaryTree.h  Bit.h  DSUtil.cpp  DSUtil.h  GenericUtil.cpp  GenericUtil.h  Global.h  KernelUtil.cpp  KernelUtil.h  Makefile  Makefile.act  ReturnHandler.h  SimAlgos.cpp  SimAlgos.h  String.cpp  String.h  StringUtil.cpp  StringUtil.h  SystemUtil.cpp  SystemUtil.h  TimerTask.h
(+244 files in other folders)
